--- a/jackknife_function_R.html
+++ b/jackknife_function_R.html
@@ -153,9 +153,9 @@ want the standard error of our estimate, <span class="math inline">\(se_{\hat{\t
 <h4>Jackknife for the mean Example: test your code here</h4>
 <pre class="r"><code>some_normals &lt;- rnorm(100,mean=7,sd=5)
 mean(some_normals)</code></pre>
-<pre><code>## [1] 6.947417</code></pre>
+<pre><code>## [1] 7.152677</code></pre>
 <pre class="r"><code>(formula_se_of_mean &lt;- sd(some_normals)/sqrt(length(some_normals)))</code></pre>
-<pre><code>## [1] 0.4722308</code></pre>
+<pre><code>## [1] 0.4959941</code></pre>
 <pre class="r"><code>all.equal(formula_se_of_mean,mean.jackknife(some_normals))</code></pre>
 <pre><code>## [1] TRUE</code></pre>
 </div>
@@ -195,11 +195,11 @@ jackknife.stderrs &lt;- c(se.a.est = sqrt(a.var), se.s.est=sqrt(s.var))
 <h3>Jackknife for Gamma Parameters Example</h3>
 <pre class="r"><code>input &lt;- rgamma(1000, shape=0.1, scale=10)
 gamma.est(input)</code></pre>
-<pre><code>##          a          s 
-## 0.09024848 9.60132301</code></pre>
+<pre><code>##           a           s 
+##  0.09894672 10.06011793</code></pre>
 <pre class="r"><code>gamma.jackknife(input)</code></pre>
 <pre><code>##   se.a.est   se.s.est 
-## 0.01263502 1.70842538</code></pre>
+## 0.01310772 1.52925776</code></pre>
 </div>
 </div>
 <div id="jackknife-for-linear-regression-coefficients" class="section level2">
@@ -228,13 +228,13 @@ data &lt;- data.frame(output,input)
 my.lm &lt;- lm(output~input, data=data)
 coefficients(my.lm)</code></pre>
 <pre><code>## (Intercept)       input 
-##   1.3264413   0.5878953</code></pre>
+##   1.2850552   0.5643398</code></pre>
 <pre class="r"><code># &quot;Official&quot; standard errors
 sqrt(diag(vcov(my.lm)))</code></pre>
 <pre><code>## (Intercept)       input 
-##  0.06897133  0.02291153</code></pre>
+##   0.0681927   0.0205657</code></pre>
 <pre class="r"><code>jackknife.lm(df=data,formula=&quot;output~input&quot;,p=2)</code></pre>
-<pre><code>## [1] 0.06743758 0.02148064</code></pre>
+<pre><code>## [1] 0.06815065 0.02110316</code></pre>
 </div>
 </div>
 <div id="refactoring-the-jackknife" class="section level2">
@@ -303,7 +303,7 @@ jackknife &lt;- function(estimator,the_data) {
 <div id="it-works" class="section level3">
 <h3>It works</h3>
 <pre class="r"><code>jackknife(estimator=mean,the_data=some_normals)</code></pre>
-<pre><code>## [1] 0.4722308</code></pre>
+<pre><code>## [1] 0.4959941</code></pre>
 <pre class="r"><code>all.equal(jackknife(estimator=mean,the_data=some_normals),
           mean.jackknife(some_normals))</code></pre>
 <pre><code>## [1] TRUE</code></pre>
@@ -320,12 +320,12 @@ jackknife &lt;- function(estimator,the_data) {
 }
 est.coefs(data)</code></pre>
 <pre><code>## (Intercept)       input 
-##   1.3264413   0.5878953</code></pre>
+##   1.2850552   0.5643398</code></pre>
 <pre class="r"><code>all.equal(est.coefs(data), coefficients(my.lm))</code></pre>
 <pre><code>## [1] TRUE</code></pre>
 <hr />
 <pre class="r"><code>jackknife(estimator=est.coefs,the_data=data)</code></pre>
-<pre><code>## [1] 0.06743758 0.02148064</code></pre>
+<pre><code>## [1] 0.06815065 0.02110316</code></pre>
 <pre class="r"><code>all.equal(jackknife(estimator=est.coefs,the_data=data),
           jackknife.lm(df=data,formula=&quot;output~input&quot;,p=2))</code></pre>
 <pre><code>## [1] TRUE</code></pre>
@@ -365,6 +365,12 @@ est.coefs(data)</code></pre>
 
 all.equal(jackknife(estimator=gamma.est,the_data=data$input),
           gamma.jackknife(data$input), check.names=FALSE)</code></pre>
+<pre><code>## [1] TRUE</code></pre>
+<pre class="r"><code>#Test:
+jackknife(estimator=est.coefs,the_data=data)</code></pre>
+<pre><code>## [1] 0.06815065 0.02110316</code></pre>
+<pre class="r"><code>all.equal(jackknife(estimator=est.coefs,the_data=data),
+          jackknife.lm(df=data,formula=&quot;output~input&quot;,p=2))</code></pre>
 <pre><code>## [1] TRUE</code></pre>
 </div>
 </div>
